--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_mobx: ^2.0.6+1
   get_it: ^7.2.0
   modal_bottom_sheet: ^2.1.0
+  state_notifier: ^0.7.2+1
 
 dev_dependencies:
   flutter_test:
