--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get_it: ^7.2.0
   modal_bottom_sheet: ^2.1.0
   state_notifier: ^0.7.2+1
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
