--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/icons/light/24x24/back/
     - assets/icons/light/24x24/big_arrow/
     - assets/icons/light/24x24/checkbox/
+    - assets/icons/light/24x24/circle_done/
     - assets/icons/light/24x24/close/
     - assets/icons/light/24x24/erase/
     - assets/icons/light/24x24/error/
@@ -117,6 +118,8 @@ flutter:
     - assets/icons/light/24x24/paused/
     - assets/icons/light/24x24/recurring_buys/
     - assets/icons/light/24x24/earn/
+    - assets/icons/light/24x24/filter/
+    - assets/icons/light/24x24/sort/
     - assets/icons/light/36x36/face_id/
     - assets/icons/light/36x36/fingerprint/
     - assets/icons/light/36x36/keyboard_erase/
